# personal-portfolio-hypertext

./: .air.toml  .gitignore  Cargo.toml  Dockerfile  README.md  bacon.toml  build.rs  devenv.nix  package-lock.json  package.json  tailwind.config.js  tailwind.css
.github/workflows/: gcp-deploy.yml
src/: handlers.rs  main.rs
src/views/: about.rs  document.rs  home.rs  life.js  life.rs  mod.rs  nav.rs  projects.rs  run_bench.js  run_life_js.js  run_life_wasm.js  snake.js  snake.rs  stack_card.rs
static/: game_of_life.js  styles.css  wasm_init.js
static/game-of-life/: conway_game_of_life_rs.d.ts  conway_game_of_life_rs.js  conway_game_of_life_rs_bg.js  conway_game_of_life_rs_bg.wasm  conway_game_of_life_rs_bg.wasm.d.ts  package.json
static/wasm/: bevy_snake-37f97249cb645107.js  bevy_snake.js  index.html
