[package]
name = "jake-personal-site"

edition= "2024"
license= "MIT"
publish = false
version = "1.0.0"

[dependencies]
anyhow = "1"
axum = "0.8"
axum-htmx = "0.7"
hypertext = { git = "https://github.com/vidhanio/hypertext", features = ["axum", "htmx"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["fs"] }
